dialog-add-task html/css updated

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -10,3 +10,5 @@
 <div class="example-button-row">
   <button mat-button (click)="openDialogAdProduct()">Task erstellen</button>
 </div>
+
+<app-dashboard-drag-and-drop [tasks]="tasks"></app-dashboard-drag-and-drop>
