--- a/src/app/dialog-add-task/dialog-add-task.component.html
+++ b/src/app/dialog-add-task/dialog-add-task.component.html
@@ -1,41 +1,58 @@
-<div class="dialog-container">
+<div class="dialog-container" [ngClass]="selectedColorValue">
   <h1 mat-dialog-title>Add Task</h1>
   <div mat-dialog-content>
     <div class="pt-6">
-      <mat-form-field class="mr-16" appearance="outline">
-        <mat-label>Task name</mat-label>
-        <input
-          [(ngModel)]="taskName"
-          matInput
-          placeholder="Task name"
-          required
-        />
-        <!-- <mat-hint>Please enter a name</mat-hint> -->
-      </mat-form-field>
+      <div class="top-section">
+        <mat-form-field appearance="outline">
+          <mat-label>Task name...</mat-label>
+          <input
+            [(ngModel)]="taskName"
+            matInput
+            placeholder="Task name"
+            required
+          />
+          <!-- <mat-hint>Please enter a name</mat-hint> -->
+        </mat-form-field>
 
-      <mat-form-field appearance="outline">
-        <mat-label>Description</mat-label>
-        <input
-          [(ngModel)]="taskDescription"
-          matInput
-          placeholder="Description"
-          required
-        />
-        <!-- <mat-hint>Please enter a name</mat-hint> -->
-      </mat-form-field>
+        <mat-form-field appearance="outline">
+          <mat-label>Description</mat-label>
+          <input
+            [(ngModel)]="taskDescription"
+            matInput
+            placeholder="Description"
+            required
+          />
+          <!-- <mat-hint>Please enter a name</mat-hint> -->
+        </mat-form-field>
+      </div>
 
-      <mat-form-field>
+      <div class="tag-container">
+        <div class="color-box" [ngClass]="selectedColorValue"></div>
+        <mat-form-field appearance="outline">
+          <mat-label>Color</mat-label>
+          <mat-select [(ngModel)]="selectedColorValue" name="tag" required>
+            @for (tag of tags; track tag) {
+            <mat-option [value]="tag.value"
+              ><span [class]="tag.pointClass" class="point"></span
+              >{{ tag.viewValue }}</mat-option
+            >
+            }
+          </mat-select>
+        </mat-form-field>
+      </div>
+
+      <!-- <mat-form-field appearance="outline">
         <mat-label>Prio</mat-label>
         <mat-select [(ngModel)]="selectedValue" name="food" required>
           @for (prio of priority; track prio) {
           <mat-option [value]="prio.value">{{ prio.viewValue }}</mat-option>
           }
         </mat-select>
-      </mat-form-field>
+      </mat-form-field> -->
     </div>
   </div>
 </div>
-<div mat-dialog-actions>
+<div mat-dialog-actions [ngClass]="selectedColorValue">
   <button (click)="dialogRef.close()" mat-button>Cancel</button>
   <button (click)="saveTask()" mat-button cdkFocusInitial>Save</button>
 </div>
