--- a/src/app/dashboard-drag-and-drop/dashboard-drag-and-drop.component.scss
+++ b/src/app/dashboard-drag-and-drop/dashboard-drag-and-drop.component.scss
@@ -3,6 +3,7 @@ mat-card {
   color: #fff;
   color: black;
   text-align: start;
+  border-radius: 3px;
 }
 
 .drag-and-drop-container {
@@ -30,6 +31,16 @@ mat-card {
   justify-content: center;
   padding: 16px;
   background-color: lightgrey;
+  position: relative;
+  border-radius: 3px;
+
+  mat-icon {
+    position: absolute;
+    right: 16px;
+    cursor: pointer;
+    transform: scale(1.5);
+    color: #3ec54e;
+  }
 }
 
 .drap-and-drop-area {
@@ -43,17 +54,30 @@ mat-card {
 .description-container {
   height: 20px;
   font-size: 12px;
-  border-top: 1px dashed #f5cc00;
 }
 
 .yellow {
   background-color: #ffffe0;
+  border: 1px solid #f8db5e;
 }
 
 .blue {
   background-color: #cce3ff;
+  border: 1px solid #8fc1ff;
 }
 
 .green {
   background-color: #dbffc2;
+  border: 1px solid #86e257;
+}
+
+.yellow-class {
+  border-top: 1px dashed #f8db5e;
+}
+
+.blue-class {
+  border-top: 1px dashed #8fc1ff;
+}
+.green-class {
+  border-top: 1px dashed #86e257;
 }
