--- a/src/app/dashboard-drag-and-drop/dashboard-drag-and-drop.component.html
+++ b/src/app/dashboard-drag-and-drop/dashboard-drag-and-drop.component.html
@@ -7,7 +7,7 @@
 
     <div class="drap-and-drop-area">
       @for (task of todoTasks; track task) {
-      <mat-card [ngClass]="task.tags">
+      <mat-card [ngClass]="task.tags" (click)="openTaskCard(task)">
         <p>{{ task.title }}</p>
         @if (task.description) {
         <p class="description-container" [ngClass]="getTagClass(task.tags)">
@@ -25,7 +25,7 @@
     </div>
     <div class="drap-and-drop-area">
       @for (task of doTodoyTasks; track task) {
-      <mat-card [ngClass]="task.tags">
+      <mat-card [ngClass]="task.tags" (click)="openTaskCard(task)">
         <p>{{ task.title }}</p>
         @if (task.description) {
         <p class="description-container" [ngClass]="getTagClass(task.tags)">
@@ -43,7 +43,7 @@
     </div>
     <div class="drap-and-drop-area">
       @for (task of inProgressTasks; track task) {
-      <mat-card [ngClass]="task.tags">
+      <mat-card [ngClass]="task.tags" (click)="openTaskCard(task)">
         <p>{{ task.title }}</p>
         @if (task.description) {
         <p class="description-container" [ngClass]="getTagClass(task.tags)">
@@ -61,7 +61,7 @@
     </div>
     <div class="drap-and-drop-area">
       @for (task of doneTasks; track task) {
-      <mat-card [ngClass]="task.tags">
+      <mat-card [ngClass]="task.tags" (click)="openTaskCard(task)">
         <p>{{ task.title }}</p>
         @if (task.description) {
         <p class="description-container" [ngClass]="getTagClass(task.tags)">
