--- a/src/app/task-card/task-card.component.scss
+++ b/src/app/task-card/task-card.component.scss
@@ -5,9 +5,45 @@
   padding: 16px;
   border-radius: 3px !important;
   height: 300px;
+  width: 350px;
+  max-width: 350px;
+  position: relative;
+
+  .button {
+    position: absolute;
+    cursor: pointer;
+    opacity: 0.6;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.1);
+      border-radius: 50%;
+    }
+  }
+
+  .close-task-btn {
+    right: 16px;
+  }
+
+  .delete-task-btn {
+    bottom: 16px;
+    right: 16px;
+  }
+
+  .title-container {
+    margin-top: 20px;
+  }
 
   p {
     margin: 0;
+    padding: 0 5px;
+  }
+
+  span {
     padding: 0 5px;
   }
 
@@ -62,12 +98,14 @@
 
 textarea {
   width: 100%;
-  height: 20px;
+  height: auto;
+  max-height: 80px;
   padding: 5px;
   border: none;
   overflow: auto;
   outline: none;
   font-size: 16px;
+  box-sizing: border-box;
 
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
