Update task handling in Board component

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,10 +1,7 @@
 <h1>Board</h1>
 
-<!-- <div class="example-button-row">
-  <button mat-button (click)="openDialogAddTask()">Task erstellen</button>
-</div> -->
-
 <app-dashboard-drag-and-drop
   [tasks]="tasks"
   (openDialogAddTask)="openDialogAddTask($event)"
+  (taskDeleted)="onTaskDeleted($event)"
 ></app-dashboard-drag-and-drop>
