--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -2,6 +2,7 @@
 
 <app-dashboard-drag-and-drop
   [tasks]="tasks"
+  [loading]="loading"
   (openDialogAddTask)="openDialogAddTask($event)"
   (taskDeleted)="onTaskDeleted($event)"
 ></app-dashboard-drag-and-drop>
