--- a/src/app/dialog-add-task/dialog-add-task.component.scss
+++ b/src/app/dialog-add-task/dialog-add-task.component.scss
@@ -36,6 +36,26 @@
   .blue {
     background-color: #8fc1ff;
   }
+
+  .red {
+    background-color: #ffa9b1;
+  }
+
+  .orange {
+    background-color: #fcbf62;
+  }
+
+  .purple {
+    background-color: #d9b5ff;
+  }
+
+  .magenta {
+    background-color: #ffaeff;
+  }
+
+  .cyan {
+    background-color: #7ee7e7;
+  }
 }
 
 .yellow {
@@ -48,6 +68,26 @@
 
 .blue {
   background-color: #d6e9ff;
+}
+
+.red {
+  background-color: #ffdfe3;
+}
+
+.orange {
+  background-color: #ffeac2;
+}
+
+.purple {
+  background-color: #f2e6ff;
+}
+
+.magenta {
+  background-color: #ffebff;
+}
+
+.cyan {
+  background-color: #e6ffff;
 }
 
 .point {
