--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,3 +62,23 @@ body {
 .point-blue {
   background-color: #add8e6;
 }
+
+.point-red {
+  background-color: #ffa9b1;
+}
+
+.point-orange {
+  background-color: #fcbf62;
+}
+
+.point-purple {
+  background-color: #d9b5ff;
+}
+
+.point-magenta {
+  background-color: #ffaeff;
+}
+
+.point-cyan {
+  background-color: #7ee7e7;
+}
