--- a/src/app/task-card/task-card.component.scss
+++ b/src/app/task-card/task-card.component.scss
@@ -85,6 +85,31 @@
   border: 1px solid #86e257;
 }
 
+.red {
+  background-color: #ffdfe3;
+  border: 1px solid #ffa9b1;
+}
+
+.orange {
+  background-color: #ffeac2;
+  border: 1px solid #fcbf62;
+}
+
+.purple {
+  background-color: #f2e6ff;
+  border: 1px solid #d9b5ff;
+}
+
+.magenta {
+  background-color: #ffebff;
+  border: 1px solid #ffaeff;
+}
+
+.cyna {
+  background-color: #e6ffff;
+  border: 1px solid #7ee7e7;
+}
+
 .yellow-class {
   background-color: #f8db5e;
 }
@@ -92,8 +117,29 @@
 .blue-class {
   background-color: #8fc1ff;
 }
+
 .green-class {
   background-color: #86e257;
+}
+
+.red-class {
+  background-color: #ffa9b1;
+}
+
+.orange-class {
+  background-color: #fcbf62;
+}
+
+.purple-class {
+  background-color: #d9b5ff;
+}
+
+.magenta-class {
+  background-color: #ffaeff;
+}
+
+.cyan-class {
+  background-color: #7ee7e7;
 }
 
 textarea {
@@ -182,6 +228,26 @@ textarea {
   .blue {
     background-color: #8fc1ff;
   }
+
+  .red {
+    background-color: #ffa9b1;
+  }
+
+  .orange {
+    background-color: #fcbf62;
+  }
+
+  .purple {
+    background-color: #d9b5ff;
+  }
+
+  .magenta {
+    background-color: #ffaeff;
+  }
+
+  .cyan {
+    background-color: #7ee7e7;
+  }
 }
 
 .yellow {
@@ -194,6 +260,26 @@ textarea {
 
 .blue {
   background-color: #d6e9ff;
+}
+
+.red {
+  background-color: #ffdfe3;
+}
+
+.orange {
+  background-color: #ffeac2;
+}
+
+.purple {
+  background-color: #f2e6ff;
+}
+
+.magenta {
+  background-color: #ffebff;
+}
+
+.cyan {
+  background-color: #e6ffff;
 }
 
 ::ng-deep .mat-mdc-form-field-subscript-wrapper {
