Update task-card to save data

--- a/src/app/dashboard-drag-and-drop/dashboard-drag-and-drop.component.scss
+++ b/src/app/dashboard-drag-and-drop/dashboard-drag-and-drop.component.scss
@@ -130,35 +130,35 @@ mat-card {
   border: 1px solid #7ee7e7;
 }
 
-.yellow-class {
+.yellow-dashed-class {
   border-top: 1px dashed #f8db5e;
 }
 
-.blue-class {
+.blue-dashed-class {
   border-top: 1px dashed #8fc1ff;
 }
 
-.green-class {
+.green-dashed-class {
   border-top: 1px dashed #86e257;
 }
 
-.red-class {
+.red-dashed-class {
   border-top: 1px dashed #ffa9b1;
 }
 
-.orange-class {
+.orange-dashed-class {
   border-top: 1px dashed #fcbf62;
 }
 
-.purple-class {
+.purple-dashed-class {
   border-top: 1px dashed #d9b5ff;
 }
 
-.magenta-class {
+.magent-dashed-class {
   border-top: 1px dashed #d9b5ff;
 }
 
-.cyan-class {
+.cyan-dashed-class {
   border-top: 1px dashed #7ee7e7;
 }
 
