--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,9 +1,30 @@
 <form (ngSubmit)="register()">
   <input
     type="text"
+    name="firstName"
+    [(ngModel)]="firstName"
+    placeholder="First Name"
+    required
+  />
+  <input
+    type="text"
+    name="lastName"
+    [(ngModel)]="lastName"
+    placeholder="Last Name"
+    required
+  />
+  <input
+    type="text"
     name="username"
     [(ngModel)]="username"
     placeholder="username"
+    required
+  />
+  <input
+    type="email"
+    name="email"
+    [(ngModel)]="email"
+    placeholder="Email"
     required
   />
   <input
